[gd_scene load_steps=26 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Media/UI/Sprite-0002.png" type="Texture" id=2]
[ext_resource path="res://Player/character_sheet.png" type="Texture" id=3]
[ext_resource path="res://Media/Resources/Minecraft.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Media/Audio/Music/drone buddy holly.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.71429, 11.4286 )

[sub_resource type="CircleShape2D" id=2]
radius = 48.0104

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "standing_back",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "standing_forward",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "standing_left",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "standing_right",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walking_back",
"speed": 6.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walking_forward",
"speed": 6.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "walking_left",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "walking_right",
"speed": 6.0
} ]

[sub_resource type="DynamicFont" id=20]
size = 22
font_data = ExtResource( 4 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
movement_speed = 12
movement_delay = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.19209e-07, 2 )
scale = Vector2( 1.75, 1.75 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="InteractTooltip" type="TextureRect" parent="."]
margin_left = -11.0
margin_top = -54.0
margin_right = 21.0
margin_bottom = -22.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )
stretch_mode = 5
flip_v = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 1.4, 1.4 )
frames = SubResource( 19 )
animation = "standing_forward"
playing = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -379.0
margin_top = -282.0
margin_right = -320.848
margin_bottom = -255.0
color = Color( 0, 0, 0, 0.462745 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 5.0
margin_top = 5.0
margin_right = 51.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 20 )
text = "Test"

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -418.0
margin_top = -319.0
margin_right = 445.0
margin_bottom = 326.0
color = Color( 0, 0, 0, 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="body_entered" from="Area2D" to="." method="_object_close"]
[connection signal="body_exited" from="Area2D" to="." method="_object_left"]
